'Ex-tutores' section align fix

--- a/components/MembersCard/MembersCard.module.css
+++ b/components/MembersCard/MembersCard.module.css
@@ -165,7 +165,7 @@
   }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1250px) {
   .groupDiv {
     min-width: 800px;
     max-width: 980px;
